<resources>
    <string name="app_name">StudyGO</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">Dashboard</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_initials">TT</string>
    <string name="user_full_name">Tung Tung\nTung Sahur</string>
    <string name="university_name">Polytechnic University of the Philippines</string>
    <string name="year_level">2nd Year - College</string>
    <string name="course_name">BS Computer Science</string>

    <!-- Simulator Strings -->
    <string name="simulator_title">Grade Simulator</string>
    <string name="simulator_subtitle">Predict your path to success</string>
    <string name="how_it_works_title">How it works</string>
    <string name="how_it_works_description">Enter your target grade and we\'ll calculate what scores you need on remaining assignments using backtracking optimization algorithms.</string>
    <string name="select_subject_label">Select Subject</string>
    <string name="target_grade_label">Target Grade (1.0 - 5.0)</string>
    <string name="target_grade_hint">e.g. 1.75</string>
    <string name="calculate_path_btn">Calculate Path</string>
    <string name="save_path_btn">Save Path</string>
    <string name="simulator_empty_state">No subjects added yet. Add a course to start simulating!</string>
    <string name="path_title">Path</string>
    <string name="achievable_status">Achievable</string>
    <string name="impossible_status">Not Possible</string>
    <string name="easy_path_label">🟢 Easy Path (Low Effort)</string>
    <string name="balanced_path_label">🟡 Balanced Path</string>
    <string name="difficult_path_label">🔴 Difficult Path</string>
    <string name="impossible_description">Target grade cannot be reached even with perfect scores.</string>
    <string name="challenging_status">Challenging</string>
    <string name="high_risk_status">High Risk</string>
    <string name="finished_status">Finished</string>
    <string name="all_tasks_finished">All tasks for this subject are already finished.</string>
    <string name="required_error">Required</string>
    <string name="range_error">Range 1.0 - 5.0</string>
    <string name="invalid_number_error">Invalid number</string>

    <string name="about_studygo_title">About StudyGO</string>
    <string name="version_text">Version 1.0.0 - Student Grade Optimization System</string>
    <string name="about_description">Powered by backtracking algorithms for intelligent grade path analysis.</string>
    <string name="reset_data_btn">Reset All Data</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="create_account_btn">Create Account</string>

    <!-- Task Input Strings -->
    <string name="task_input_title">Task Input</string>
    <string name="task_input_subtitle">Add a new graded task</string>
    <string name="task_name_label">TASK NAME</string>
    <string name="task_name_hint">e.g. Quiz 3</string>
    <string name="score_label">SCORE</string>
    <string name="score_hint">Score</string>
    <string name="items_label">NUMBER OF ITEMS</string>
    <string name="items_hint">Items</string>
    <string name="is_finished_label">Is Finished?</string>
    <string name="save_and_exit_btn">Save and Exit</string>

    <!-- Results Strings -->
    <string name="final_results_title">Final Results</string>
    <string name="results_subtitle">Summary of your academic performance</string>

    <!-- Item Category Strings -->
    <string name="add_task_label">Add task</string>

    <!-- Item Task Detail Strings -->
    <string name="task_score_label">Score</string>
</resources>